--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,14 @@
 
 .add-container {
   position: relative;
-  width: 320px;
-  margin-bottom: 20px; }
+  width: 320px; }
   .add-container .add-input {
     width: 100%;
     height: 36px;
     border: 1px solid #ebeef5;
-    padding-right: 120px; }
+    padding: 0 120px 0 12px;
+    line-height: 36px;
+    outline: none; }
   .add-container .addUseful {
     position: absolute;
     top: 0;
@@ -21,16 +22,28 @@
     color: #fff;
     font-size: 14px;
     text-align: center;
-    background: #38f; }
+    background: #38f;
+    cursor: pointer; }
 
 .useful-list {
-  overflow: hidden; }
+  overflow: hidden;
+  padding: 20px 0 8px; }
   .useful-list .item {
-    display: inline-block;
-    float: left; }
+    display: flex;
+    float: left;
+    box-shadow: rgba(51, 51, 51, 0.2) 0px 1px 3px 0px;
+    background: #eee;
+    margin-right: 12px;
+    margin-bottom: 12px;
+    cursor: pointer; }
   .useful-list .content {
-    padding: 3px; }
+    padding: 6px;
+    flex: 1; }
   .useful-list .close {
-    padding: 3px; }
+    padding: 6px;
+    border-right: 1px solid #ebeef5; }
+
+.dcsimitator-content {
+  padding-top: 0 !important; }
 
 /*# sourceMappingURL=style.css.map */
